// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component when HOME is rendered should match the HOME snapshot 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/",
    ]
  }
  keyLength={0}
>
  <App />
</MemoryRouter>
`;

exports[`App component when Not Found page is rendered should match the Not Found snapshot 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/giberish",
    ]
  }
  keyLength={0}
>
  <App />
</MemoryRouter>
`;

exports[`App component without props should match snapshot 1`] = `
<Switch>
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    path="/search"
  />
  <Route
    component={[Function]}
  />
</Switch>
`;
